--- a/deployment/minikube/ingress.yaml
+++ b/deployment/minikube/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: keycloak-basic-login-ingress
+  name: image-service-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /files/$2
     kubernetes.io/ingress.class: "nginx"
