--- a/deployment/minikube/ingress.yaml
+++ b/deployment/minikube/ingress.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: image-service-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /files/$2
+    nginx.ingress.kubernetes.io/rewrite-target: /files/$2?token=fbsxIBmBRNff6d97jwnFfWADhFWCs3fA
     kubernetes.io/ingress.class: "nginx"
 spec:
   rules:
